3/21/2014
- implement logout function (and cache delete)

3/19/2014
- make all caching (incl. shm) vhost specific

3/18/2014
- complete re-factoring caching layer
- documentation: caching primitives/update README

3/17/2014
- first batch of rewriting caching layer
- add memcache and shared memory support
- store jwks in cache

3/16/2014
- loosen response_types_supported (provider) and response_types (client) handling; .provider only warns, .client overrides now

3/14/2014
- fix warning/debug printout in handle_implicit_post (was logging as warning: handle_implicit_redirect)
- include nonce in "token" flow as well (mitreid.org)
- spelling fixes

3/13/2014
- version 2.1
- change README an provide example RedirectURI's that don't collide with protected content

3/12/2014
- added support for calling the userinfo endpoint in implicit flows ("token id_token")
- allow for returning account names, domain names or partial issuer identifiers in the discovered oidc_provider value
- normalize issuer filenames cq. no trailing slashes included anymore, no leading "https%3A%2F%2F"
- added configurable JWK key set retrieve interval
- improved error response handling

3/11/2014
- delete metadata files also when they do not parse as JSON
- strip charset utf-8 addition from application/json Content-Type
- allow to override default response_type in client metadata

3/10/2014
- version 2.0.1
- extend iat window to 10 minutes (due to interop test results Google/Mitre...)
- don't write more than strlen for metadata files

3/10/2014
- version 2.0
- Debian packaging
- more complete documentation of configuration primitives
- iat checking with 60 seconds slack and iat-based nonce caching
- support for HMAC verification (HS256, HS384, HS512)

3/9/2014
- improve javascript for implicit post
- always check the signature on the id_token now, Basic or Implicit
- factor out reading files in oidc_util 
- revert adding /0 at end of file